--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        
+        <div class="header-container">
+            <div class="header-logo"><strong>Header Logo</strong></div>
+            <div class="header-link-container">
+                <div class="header-link-one">Header Link One</div>
+                <div class="header-link-two">Header Link Two</div>
+                <div class="header-link-three">Header Link Three</div>
+            </div>
+        </div>
     </body>
 </html>
