adjusted product to fit meme-y recipe website. Now with 75% more communism!

--- a/index.html
+++ b/index.html
@@ -2,16 +2,60 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin Landing Page</title>
+        <title>OUR!Recipes</title>
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <div class="header-container">
-            <div class="header-logo"><strong>Header Logo</strong></div>
+            <div class="header-logo"><strong>OUR!Recipes</strong></div>
             <div class="header-link-container">
-                <div class="header-link-one">Header Link One</div>
-                <div class="header-link-two">Header Link Two</div>
-                <div class="header-link-three">Header Link Three</div>
+                <div class="header-link-one">List</div>
+                <div class="header-link-two">Upload</div>
+                <div class="header-link-three">Download</div>
+            </div>
+        </div>
+
+        <div class="second-container">
+            <div class="left-container">
+                <div class="left-item-one">
+                <h3><strong>OUR! Family's Recipes</strong></h3>
+                </div>
+                <div class="left-item-two">
+                <p>The purpose of this website is to serve as a compilation of
+                    family recipes. If you have found this page, enjoy! All is
+                    for all.
+                </p></div>
+                <div class="left-item-three"><button class="button">
+                    <strong>Complaints about imagery?</strong></button></div>
+            </div>
+            <div class="right-container">
+            <img src="./Images/communism-17071.jpg" class="main-image"></div>
+        </div>
+
+        <div class="third-container">
+            <strong>Some Favorites</strong>
+        </div>
+
+        <div class="subtext-container">
+            <div class="image-container">
+                <div class="image"></div>
+                <div class="image"></div>
+                <div class="image"></div>
+                <div class="image"></div>
+            </div>
+            <div class="text-container">
+                <div class="subtext">
+                this is some subtext under an illustration or image
+                </div>
+                <div class="subtext">
+                this is some subtext under an illustration or image
+                </div>
+                <div class="subtext">
+                this is some subtext under an illustration or image
+                </div>
+                <div class="subtext">
+                this is some subtext under an illustration or image
+                </div>
             </div>
         </div>
     </body>
