Added Favorites container with images

--- a/index.html
+++ b/index.html
@@ -38,23 +38,27 @@
 
         <div class="subtext-container">
             <div class="image-container">
-                <div class="image"></div>
-                <div class="image"></div>
-                <div class="image"></div>
-                <div class="image"></div>
+                <div><img src="./Images/no-bake-oatmeal-bars-peanut-butter.jpg"
+                class="fav-image"></div>
+                <div><img src="./Images/macaroni-1046612.jpg"
+                class="fav-image"></div>
+                <div><img src="./Images/royal-icing-cookies-5952523_1920.jpg"
+                class="fav-image"></div>
+                <div><img src="./Images/easy-lasagna-image-683x1024.webp"
+                class="fav-image"></div>
             </div>
             <div class="text-container">
                 <div class="subtext">
-                this is some subtext under an illustration or image
+                Grandma Donna's Peanut Butter No Bake Bars
                 </div>
                 <div class="subtext">
-                this is some subtext under an illustration or image
+                Nana's Mac and Cheese
                 </div>
                 <div class="subtext">
-                this is some subtext under an illustration or image
+                Judy's Icing Sugar Cookies
                 </div>
                 <div class="subtext">
-                this is some subtext under an illustration or image
+                Aunt Tina's Lasagna
                 </div>
             </div>
         </div>
