Added Kropotkin quote for 10% more anarchism

--- a/index.html
+++ b/index.html
@@ -62,5 +62,16 @@
                 </div>
             </div>
         </div>
+
+        <div class="quote-container">
+            <div class="quote"><p><em>“The means of production being the collective
+            work of humanity, the product should be the collective property of the race. 
+            Individual appropriation is neither just nor serviceable. 
+            All belongs to all. All things are for all men, since all men have 
+            need of them, since all men have worked in the measure of their strength 
+            to produce them, and since it is not possible to evaluate every one's 
+            part in the production of the world's wealth."</em></p></div>
+            <div class="quote-author"><strong><p>-Pyotr Kropotkin</p></strong></div>
+        </div>
     </body>
 </html>
