--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="second-container">
             <div class="left-container">
                 <div class="left-item-one">
-                <h3><strong>OUR! Family's Recipes</strong></h3>
+                <h3><strong>OUR!Family's Recipes</strong></h3>
                 </div>
                 <div class="left-item-two">
                 <p>The purpose of this website is to serve as a compilation of
@@ -73,5 +73,19 @@
             part in the production of the world's wealth."</em></p></div>
             <div class="quote-author"><strong><p>-Pyotr Kropotkin</p></strong></div>
         </div>
+
+        <div class="action-container">
+            <div class="info-container">
+                <div><strong>
+                    Call to Arms! Revolt Now!
+                </strong></div>
+                <div>
+                    Click on the button right over there to bring a
+                    revolution to you!
+                </div>
+            </div>
+            <div><button class="revolution-button">Eat the Rich!</button></div>
+        </div>
+
     </body>
 </html>
