Added copyright container(Not in MY revolution)

--- a/index.html
+++ b/index.html
@@ -87,5 +87,9 @@
             <div><button class="revolution-button">Eat the Rich!</button></div>
         </div>
 
+        <div class="copyright-container">
+            <div>Open-Source -- No Copyright in OUR Revolution!</div>
+        </div>
+
     </body>
 </html>
